--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.birthdaycard'
-    compileSdkPreview compose_ui_version
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.birthdaycard"
