Revert "BirthdayGreetingWithText app"
This reverts commit 2e401de34b6c431d7ee17e1a9e224077acc39f04.

# Conflicts:
#	app/src/main/java/com/example/birthdaycard/MainActivity.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.birthdaycard'
-    compileSdk 33
+    compileSdkPreview compose_ui_version
 
     defaultConfig {
         applicationId "com.example.birthdaycard"
